WFCORE-1374 update build for latest JDK9 ea